# osprey

./: .clang-format  .gitignore  .gitmodules  AdastralCMakeConfig.cmake  BUILDING.md  Buttons.gd  CMakeCache.txt.bak  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.txt  README.md  RunCMake.ps1  RunCMake.sh  adastral-of.png.import  adastral-tf2c.png.import  adastral.build  adastral.png.import  bg.png.import  boot.tscn  error.gd  export_presets.cfg  font.tres  icon.svg.import  init.gd  intro.tscn  main.gd  main.tres  main.tscn  of.png.import  of_theme.tres  ofbg.png.import  oops.tscn  panic.tscn  project.godot  rounded.gdshader  starspin.gd  test.toml  tf2c-0.png.import  tf2c_normal_font.tres  tween.gdshader  (+1 more)
Code/: CMakeLists.txt
Code/AdastralManager/: AdastralDefines.h  CMakeLists.txt  gdextension_reg.cpp
Code/AdastralManager/GDRegister/: register_adastral_types.h
Code/AdastralPalace/: AdastralPalace.h  CMakeLists.txt
Code/AdastralTestFramework/: CMakeLists.txt
Code/BuildSystem/CMake/: FindLibtorrentRasterbar.cmake  adPlatformVars.cmake  adUtils.cmake
Code/BuildSystem/CMake/CMakeUtils/: CPM.cmake  adUtilsCI.cmake  adUtilsCppFlags.cmake  adUtilsDependency.cmake  adUtilsDetect.cmake  adUtilsExternal.cmake  adUtilsPCH.cmake  adUtilsSubmodule.cmake  adUtilsTarget.cmake  adUtilsUnityFiles.cmake  adUtilsVcpkg.cmake  get_cpm.cmake
Code/BuildSystem/GitActions/: AdastralWindows-x64.yml
Code/angus/: CMakeLists.txt  adastral_defs.cpp  adastral_defs.h
Code/beacon/: CMakeLists.txt  beacon.cpp  beacon.h
Code/bilsdale/: bilsdale.cpp  bilsdale.hpp
Code/binding/: CMakeLists.txt  binding.cpp  binding.h  register_types.cpp  register_types.h
Code/binding/lib/: winter-x64-debug.exp  winter-x64-debug.lib
Code/binding/lib/Dev/: winter-x64-debug.exp
Code/caldbeck/: CMakeLists.txt  error.cpp  error.hpp  event.cpp  eventsystem.cpp  eventsystem.hpp  progress.cpp  progress.hpp
Code/coldfield/: AdastralDefines.h  CMakeLists.txt  gdextension_reg.cpp
Code/coldfield/GDRegister/: register_adastral_types.h
Code/emley/: CMakeLists.txt
Code/emley/events/: error.cpp  error.hpp  event.cpp  eventsystem.cpp  eventsystem.hpp  progress.cpp  progress.hpp
Code/emley/kachemak/: kachemak.cpp  kachemak.hpp
Code/emley/version/: version.cpp  version.hpp
Code/fremont/: CMakeLists.txt  fremont.cpp  fremont.hpp
Code/headless/: CMakeLists.txt  headless.cpp  headless.h
Code/moss/: CMakeLists.txt  moss.cpp  moss.hpp
Code/net/: CMakeLists.txt  net.cpp  net.hpp
Code/palace/: CMakeLists.txt  palace.cpp  palace.h  palace.hpp
Code/shared/: CMakeLists.txt  adastral_defs.cpp  adastral_defs.h
Code/shared/events/: error.cpp  error.hpp  event.cpp  event.hpp  eventsystem.cpp  eventsystem.hpp  progress.cpp  progress.hpp
Code/sheffield/: CMakeLists.txt  sheffield.cpp  sheffield.hpp
Code/sutton/: CMakeLists.txt  register_types.cpp  sutton.cpp  sutton.h
Code/sys/: CMakeLists.txt  sys.cpp  sys.hpp
Code/torrent/: CMakeLists.txt  bilsdale.hpp  torrent.cpp  torrent.hpp
adastral/: CMakeLists.txt  adastral.cpp
adastral/events/: error.hpp  event.hpp  eventsystem.cpp  eventsystem.hpp  progress.cpp  progress.hpp
adastral/kachemak/: kachemak.cpp  kachemak.hpp
adastral/utility/: utility.cpp  utility.hpp
adastral/version/: version.hpp
assets/: about.png.import  adastral-of.png.import  adastral-pf2.png.import  adastral-tf2c.png.import  adastral.png.import  adastral.svg.import  adastral256.png.import  bg.png.import  cf2_wordmark_big.png.import  fcd-logo.svg.import  fo-logo.png.import  fo-logo.svg.import  fo_bg.png.import  folder.png.import  home.svg.import  lf-bg.jpg.import  lf-mono.png.import  lf-test.png.import  lf-wordmark.png.import  lf2-logo-mono.svg.import  lf2-mono.png.import  mandrill.png.import  mockup.png.import  mockup3.png.import  of-bg-new.png.import  of-bg.jpg.import  of-bg.png.import  of-bg.tiff  of-large.png.import  of-logo-new.png.import  of-logo-new.svg.import  of-mono.png.import  of.png.import  of_wordmark_big.png.import  pf2-bg.png.import  pf2-logo-mono.svg.import  pf2-mono.png.import  pf2.png.import  pf2_wordmark_trimmed.png.import  settings.png.import  (+8 more)
belmont/: adastral.build  boot.tscn  export_presets.cfg  init.gd  intro.gd  main.gd  main.tscn  oops.tscn  panic.tscn  project.godot  setup.gd  setup.tscn
emley/: .gitignore  README.md
emley/adastral/: CMakeLists.txt  adastral.cpp
emley/adastral/events/: event.hpp  eventsystem.cpp
emley/adastral/kachemak/: kachemak.cpp
emley/adastral/utility/: utility.hpp
fonts/: Asap-Bold.ttf.import  Asap-Medium.ttf.import  HankenGrotesk-Bold.ttf.import  HankenGrotesk-Medium.ttf.import  bold_font_data.tres  font.tres  font_data.tres  main_font.tres  of_bold_font.tres  of_normal_font.tres  scroll.tscn
themes/: adastral_gradient.tres  base.tres  main.tres  of_gradient.tres  of_theme.tres  (+2 more)
winter/: .clang-format  .gitmodules  CMakeLists.txt  README.md
winter/.github/workflows/: linux.yml
winter/Code/: CMakeLists.txt
winter/Code/AdastralTestFramework/Application/: AdastralTestApp.h
winter/Code/BuildSystem/CMake/: Findboost.cmake  adPlatformVars.cmake
winter/Code/BuildSystem/CMake/CMakeUtils/: adUtilsDependency.cmake  adUtilsDetect.cmake  adUtilsTarget.cmake  adUtilsVars.cmake
winter/Code/BuildSystem/GitActions/: AdastralWindows-x64.yml
winter/Code/binding/: CMakeLists.txt  binding.cpp  binding.h  binding.hpp  register_types.cpp  register_types.h
winter/Code/emley/: CMakeLists.txt
winter/Code/emley/kachemak/: kachemak.cpp  kachemak.hpp
winter/Code/emley/version/: version.cpp  version.hpp
winter/Code/headless/: headless.cpp  headless.h  headless.hpp
winter/Code/net/: CMakeLists.txt  net.cpp  net.hpp
winter/Code/palace/: CMakeLists.txt  palace.cpp  palace.hpp
winter/Code/shared/: adastral_defs.cpp  adastral_defs.h  adastral_defs.hpp
winter/Code/shared/events/: error.cpp  error.hpp  event.cpp  event.hpp  eventsystem.cpp  eventsystem.hpp  progress.cpp  progress.hpp
winter/Code/sys/: CMakeLists.txt  sys.cpp  sys.hpp
winter/Code/torrent/: CMakeLists.txt  torrent.cpp  torrent.hpp
winter/doc/: Doxyfile
(+32 files in other folders)
