project(emley)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(CURL REQUIRED)
FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
FetchContent_MakeAvailable(json)
add_library(${PROJECT_NAME} kachemak/kachemak.cpp version/version.cpp )
target_include_directories(emley PUBLIC ./)
target_include_directories(emley PUBLIC ../shared)
target_include_directories(emley PUBLIC ../net)
target_include_directories(emley PUBLIC ../sys)
target_include_directories(emley PUBLIC ../torrent)
include(FetchContent)
IF (GODOT)
    target_include_directories(emley PRIVATE godot::cpp)
    target_link_libraries(emley PRIVATE godot::cpp)
ENDIF ()
# Get the name of this folder as the project name
target_link_libraries(${PROJECT_NAME} PRIVATE CURL::libcurl nlohmann_json::nlohmann_json sys net shared torrent)
